--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "lib",
   "scripts": {
     "start": "tsc-watch --onSuccess 'node test.js'",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.4",
     "tsc-watch": "^4.6.2",
     "typescript": "^4.6.2"
   },
