--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "@financial-times/sonic",
   "version": "1.0.0",
   "description": "a parser and linter for (Fastly) VCL",
+  "type": "module",
   "main": "lib",
   "scripts": {
     "start": "tsc-watch --onSuccess 'node test.js'",
+    "watch": "tsc-watch",
     "build": "tsc",
     "test": "jest"
   },
@@ -12,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "jest": "^27.5.1",
@@ -20,6 +23,8 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "typescript-parsec": "^0.3.2"
+    "globby": "^13.1.1",
+    "typescript-parsec": "^0.3.2",
+    "yargs": "^17.4.0"
   }
 }
